<resources>
    <string name="app_name">Horoscope 2015</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="desclaim">Disclaimer:</string>
    <string name="desclaim_text">Predications may vary from person to person Its a general prediction, for specific prediction about you, kindly the fill Enquiry Form.</string>
    <string name="exit_now">Exit Now</string>
    <string name="cancel">Cancel</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="rate_us">Rate Us</string>
    <string name="tell_a_friend">Tell a friend</string>
    <string name="about_us">About us</string>
    <string name="more_apps">More apps</string>
    <string name="disclaimer2">Disclaimer</string>
    <string name="aquarius">Aquarius\n(20Jan-18Feb)</string>
    <string name="aries">Aries\n(21Mar-19Apr)</string>
    <string name="cancer">Cancer\n(21Jun-22Jul)</string>
    <string name="capricorn">Capricorn\n(22Dec-19Jan)</string>
    <string name="gemini">Gemini\n(21May-20Jun)</string>
    <string name="leo">Leo\n(23Jul-22Aug)</string>
    <string name="libra">Libra\n(23Sept-22Oct)</string>
    <string name="pisces">Pisces\n(19Feb-20Mar)</string>
    <string name="sagittarus">Sagittarius\n(22Nov-21Dec)</string>
    <string name="scorpio">Scorpio\n(23Oct-21Nov)</string>
    <string name="taurus">Taurus\n(20April-20May)</string>
    <string name="virgo">Virgo\n(23Aug- 22Sep)</string>
    <string name="aquarius_monthly">Aquarius</string>
    <string name="aries_monthly">Aries</string>
    <string name="cancer_monthly">Cancer</string>
    <string name="capricorn_monthly">Capricorn</string>
    <string name="gemini_monthly">Gemini</string>
    <string name="leo_monthly">Leo</string>
    <string name="libra_monthly">Libra</string>
    <string name="pisces_monthly">Pisces</string>
    <string name="sagittarius_monthly">Sagittarius</string>
    <string name="scorpio_monthly">Scorpio</string>
    <string name="taurus_monthly">Taurus</string>
    <string name="virgo_monthly">Virgo</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="jun">Jun</string>
    <string name="july">Jul</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string name="aquaris_apr">This month is good from the professional point of view as well from the family point of view. You will get happiness and you will be surrounded by many females.</string>
    <string name="aquaris_aug">For the married ones this is little disturbing as married life will have little problems and misunderstandings, but profession and family will do extremely well. Emotional involvement in all family issues will be there. Love in family at high pace.</string>
    <string name="aquarius_dec">Month of December is good for you. The coordination between you and spouse will be good. Profession will rise, partners will be helpful. All planning will be successful. The only negative parts of this is excessively fast in driving which can lead to accident.</string>
    <string name="aquarius_feb">This month is different for you during this month. You will enjoy as well as earn good amount of money but in the second half of the month you are over imaginative nature may make you depressive or some fears might developed.</string>
    <string name="aquarius_jan">Avoid loosing temperament. Your sort temper nature may spoil the show. Avoid saying no on the face. Avoid landing money especially to the friends or relatives.</string>
    <string name="aquarius_jul">This month is good for bachelors of marriageable age those who are married their married life is good. Your children will perform extremely well. Your family and social involvements will be on right track.</string>
    <string name="aquarius_jun">Avoid taking rash decisions this can lead to excessive expenses and hardship. Avoid spending money on friends otherwise family dispute might be there. Doing good in profession if take care of over expenses and unnecessary travels.</string>
    <string name="aquarius_mar">The month of March is good. You gain of confidence is there. At the same time your calculations and friendship is going to increase. In the second half of the month disputes with some relatives is indicated.</string>
    <string name="aquarius_may">This month will be little trouble some in family and financial matter but busyness in business will be there. Due to excessive involvements chances of hidden losses may be there.</string>
    <string name="aquarius_nov">This month is good for you. Except the fears good support from the father, from the wife, from the profession, everything will good. But at the same time some fears may be there. Avoid taking decisions in dark.</string>
    <string name="aquarius_oct">Month of October is little disturbing and different. In the first half you will see both ends of life the happiest and sorrow. In the first half married life will be hell. But in the second half you will get just opposite result. Father will favour you. Profession will sine in everything will be on right track.</string>
    <string name="aquarius_sept">Your spouse will prove to superior than you. At the same time your most of calculations will go wrong. But your emotions with the kids will be there. Unnecessary expenses will not be there.</string>
    <string name="aries_apr">For Ariens this month is mixed result giving. First half is full of romance, love and friendship. In second half focus only business will be there. Some business journey will be fruitful and that leads to good results. Avoid night driving in the second half of April.</string>
    <string name="aries_august">This month will create lots of ups &amp; downs or losses in profession. All profession decisions should be taken with caution. Family environment will also be tensed. If you are in joint family than visiting to the religious place is highly beneficial. If there is any disease that can aggravate some take the prevention.</string>
    <string name="aries_dec">December month is month of positive relations with spouse and mother. But the children will do better. In some of cases father’s health might create some problems. Emotionally you will get everything. Travels will be materialized.</string>
    <string name="aries_feb">During first half of February you will be troubled by enemies, misunderstandings or disputes may rise. But within the family peace will be there. Avoid unnecessary arguments, disputes. In second half chances of mishapping are there. Be attentive and careful while driving. A religious trip with mother will ward of they negative results.</string>
    <string name="aries_jan">In January 2015 your desires will come true, longed distance religious journey is indicated, relationship with the mother will be good and other family members will also grow. In second half of the month avoid taking rash and bold decisions. These decisions can lead to professional blunders, minor fight or disputes in professional are there. Those who are doing professional related to fire or force will see the positive trend. Lacerative income is also indicated.</string>
    <string name="aries_july">Celebration in the family can be there. Family friends will be happy and good. Some benefits from younger brother or partner can be aspected. Whatever suggestions you will give turn to be right for the others.</string>
    <string name="aries_jun">This month is little depressive on family and professional matters. Due to rough language you will face problems. Your mother might be hospitalized will face some long term disease. Careing mother will give excessively good result. If any surgery of eyes of your mother is pending than planned a surgery according. Even traveling abroad will not give good results.</string>
    <string name="aries_mar">March 2015 is little difficult month for the Ariens, expenses will be on the pick, unrecoverable losses are there. Avoid relationship with opposite sex. Chances of indulging into physical relation are on the higher side. If any court case or disputes are start that will aggravate for long.</string>
    <string name="aries_may">This month is like rollercoaster most of the time you will loose your temperament and after that you will be emotional. In first half the decision taken on professional and personal front will be result oriented. But in the second half some emotional setbacks can be there. In this month avoid expressing everything to even close once.</string>
    <string name="aries_nov">This month is very problematic for you. This can lead you to bad name and problem some in business. Your younger sister can create little problems for you. Kids will go out of control. If in partnership avoid taking risk. If some dispute rises than opt for compromise.</string>
    <string name="aries_oct">Your father may suffer from poor health or some bad name. If there is some litigation they will loose the betel. Business losses are also aspected due to that some family problem may rise. Your kids will be attractive towards opposite sex and chances of getting involved are on the higher side.</string>
    <string name="aries_sep">This month is full of expenses and wasteful travel during this month all your calculation will go wrong. At the same time get some good news from beloved once or children is there. Avoid any disputes with your mother or mother-in-law.</string>
    <string name="cancer_apr">This is the best month of year. You will have emotional support. Your professional will touch the new heights. Parents and family will be very happy with you. If you are suffering from some diseases you will come out of crunch of disease. Avoid doing anything unfair because everything will come to you without putting much effort. Association of opposite sex at the place of profession will be there and will remain happy in their association.</string>
    <string name="cancer_aug">This month is full of discipline in personal life. You will try to complete all your commitments. Due to excessive commitments your profession may suffer. Due to excessive projects or work load you might face some professional disappointments. Your excessive discipline towards yourself and others will be relaxed in the second half of the month.</string>
    <string name="cancer_dec">Last month of the year is also not good. This might spoil peace of mind during the first half your family relationship may not be very good. You may face criticism or some mysterious situations. In the last face of the month misunderstandings in the business or family matter is also indicated. Health of your father may be problematic. If he is facing any skin problems than treat it immediate. Loosing temperament might affect your work efficiency will make you controversial.</string>
    <string name="cancer_feb">In month of February your all religious activities will dominate and family environment may be affected due to these activities. Your emotional bent of mind towards the excessive activities might lead to some professional disturbance also. Your kids might not perform well and your married life will be highly affected. Avoid going to religious journeys in groups. If your wife is having some gynecological disorders get them treated earliest. This can be dangerous.</string>
     <string name="query">Enter your query</string>
</resources>