<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools" >

    <item
        android:id="@+id/rate_us"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/rate_us"/>
    <item
        android:id="@+id/friend"
        android:orderInCategory="2"
        android:showAsAction="never"
        android:title="@string/tell_a_friend"/>
    <item
        android:id="@+id/feedback"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/query"/>
    <item
        android:id="@+id/about"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/about_us"/>
    <item
        android:id="@+id/disclaimer"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/disclaimer2"/>
    <item
        android:id="@+id/more"
        android:orderInCategory="3"
        android:showAsAction="never"
        android:title="@string/more_apps"/>

</menu>